# deadbirdmark

./: Cargo.toml  README.md
migrations/2023-07-12-210220_users/: up.sql
migrations/2023-07-12-210738_posts/: up.sql
src/: main.rs  schema.rs
