[package]
name = "deadbirdmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "=0.5.0-rc.3"
rocket_oauth2 = "0.5.0-rc.2"
anyhow = "1.0"
reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"